my-cluster-structure/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: hashicorp/http-echo:latest
        args: ["-text", "Hello from Backend API!", "-listen", ":5678"]
        ports:
        - containerPort: 5678
        livenessProbe:
          httpGet:
            path: /
            port: 5678
        # ИСПРАВЛЕНА: теперь стучится на правильный порт 5678
        readinessProbe:
          tcpSocket:
            port: 5678
        resources:
          requests: { memory: "16Mi", cpu: "10m" }
          limits: { memory: "32Mi", cpu: "50m" }
---
# НОВЫЙ БЛОК: Создаем статический внутренний IP для бэкенда
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
